clusters/apps/metabase/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  labels:
    app.kubernetes.io/part-of: refclient
