clusters/apps/metabase/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    app.kubernetes.io/name: metabase
spec:
  selector:
    app.kubernetes.io/name: metabase
  ports:
    - name: http
      port: 3000
      targetPort: http
